fixes bug 327719 "Passing a big double serialize a rounded double" patch by afatecha@idea.com.py r=dbaron sr=darin