xpcom/tests/TestStrings.cpp
@@ -516,6 +516,32 @@ PRBool test_appendint64()
     return PR_TRUE;
   }
 
+PRBool test_appendfloat()
+  {
+    nsCString str;
+    double bigdouble = 11223344556.66;
+    static const char double_expected[] = "11223344556.66";
+    static const char float_expected[] = "0.01";
+
+    // AppendFloat is used to append doubles, therefore the precision must be
+    // large enough (see bug 327719)
+    str.AppendFloat( bigdouble );
+    if (!str.Equals(double_expected)) {
+      fprintf(stderr, "Error appending a big double: Got %s\n", str.get());
+      return PR_FALSE;
+    }
+    
+    str.Truncate();
+    // AppendFloat is used to append floats (bug 327719 #27)
+    str.AppendFloat( 0.1f * 0.1f );
+    if (!str.Equals(float_expected)) {
+      fprintf(stderr, "Error appending a float: Got %s\n", str.get());
+      return PR_FALSE;
+    }
+
+    return PR_TRUE;
+  }
+
 PRBool test_findcharinset()
   {
     nsCString buf("hello, how are you?");
@@ -710,6 +736,7 @@ tests[] =
     { "test_set_length", test_set_length },
     { "test_substring", test_substring },
     { "test_appendint64", test_appendint64 },
+    { "test_appendfloat", test_appendfloat },
     { "test_findcharinset", test_findcharinset },
     { "test_rfindcharinset", test_rfindcharinset },
     { "test_stringbuffer", test_stringbuffer },
